--- a/NetflixHtmlFile.html
+++ b/NetflixHtmlFile.html
@@ -10,10 +10,10 @@
 <body>
     <div class="main">
         <nav>
-            <span><img src="https://raw.githubusercontent.com/CodeWithHarry/Sigma-Web-Dev-Course/ef8a6008414c396c81e5acafa11b8835e7b477a7/Video%2053/assets/images/logo.svg" width="53" alt="helo this is netflix img"> </span>
+            <span><a href="https://www.netflix.com/in/"><img src="https://raw.githubusercontent.com/CodeWithHarry/Sigma-Web-Dev-Course/ef8a6008414c396c81e5acafa11b8835e7b477a7/Video%2053/assets/images/logo.svg" width="53" alt="helo this is netflix img"></a></span>
             <div>
-                <button class="btn">English</button>
-                <button class="btn btnred">Sign in</button>
+                <button class="btn"><select><option>English</option><option>Hindi</option></select></button>
+                <button class="btn btnred"><a href="https://www.netflix.com/in/">Sign in</a></button>
             </div>
         </nav>
         <div class="box"></div>
@@ -23,15 +23,131 @@
             <span>Ready to watch? Enter your email to create or restart your membership</span>  
             <div>
                 <input type="text" placeholder="Email Address" style="size:0lvw ;">
-                <button style="size:0lvw ;" class="btn btnred">Get Started</button>
+                <button style="size:0lvw ;" class="btn btnred"><a href="https://www.netflix.com/signup/password?locale=en-IN">Get Started</a></button>
             </div>          
         </div>       
     </div>
+    <div class="separation"></div>
+
     <section class="first">
         <div>
-            Enjoy on your TV
-            Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.
+            <span>Enjoy on your TV</span>
+            <span>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</span>
+        </div>
+        <div class="secimg">
+            <img src="Assets/images/girl.jpg" alt="this is img" height="67px">
         </div>
     </section>
+
+    <div class="separation"></div>
+
+    <section class="first">
+        <div>
+            <span>Download your shows to watch offline</span>
+            <span>Save your favourites easily and always have something to watch.</span>
+        </div>
+        <div class="secimg">
+            <img src="Assets/images/tv.jpg" alt="this is img" height="67px">
+        </div>
+    </section>
+
+    <div class="separation"></div>
+
+    <section class="first">
+        <div>
+            <span>Watch everywhere</span>
+            <span>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</span>
+        </div>
+        <div class="secimg">
+            <img src="https://staticg.sportskeeda.com/editor/2022/08/02a0f-16608080696737-1920.jpg" alt="this is img" height="67px">
+        </div>
+    </section>
+
+    <div class="separation"></div>
+
+    <section class="first">
+        <div>
+            <span>Create profiles for kids</span>
+            <span>Send children on adventures with their favourite characters in</span>
+            <span>a space made just for them—free withyour membership.</span>
+        </div>
+        <div class="secimg">
+            <img src="Assets/images/children.jpg" alt="this is img" height="67px">
+        </div>
+    </section>
+
+    <div class="separation"></div>
+    
+    <section class="faq">
+        <h2>Frequently Asked Questions</h2>
+
+        <div class="faqbox">
+            <span>What is Netflix</span>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
+                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+        </div>
+
+    </div>
+    <div class="faqbox">
+        <span>How much does Netflix cost?</span>
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+
+    </div>
+    <div class="faqbox">
+        <span>What can I watch on Netflix?</span>
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+
+    </div>
+    <div class="faqbox">
+        <span>Where can I watch?</span>
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+
+    </div>
+</section>
+<div class="separation"></div>
+
+<footer>
+    <div class="questions">
+        Questions? Call 000-800-919-1694
+    </div>
+    <div class="footer">
+        <div class="footer-item"> 
+            <a href="faq">Investor Relations</a>
+            <a href="faq">Jobs</a>
+            <a href="faq">Ways to Watch</a>
+            <a href="faq">Terms of Use</a>
+        </div>
+
+        <div class="footer-item"> 
+            <a href="faq">Help Centre</a>
+            <a href="faq">Account</a>
+            <a href="faq">Speed Test</a>
+            <a href="faq">Legal Notices</a>
+        </div>
+        <div class="footer-item">
+            <a href="faq">Media Centre</a>
+            <a href="faq">Privacy</a>
+            <a href="faq">Cookie Preferences</a> 
+            <a href="faq">Corporate</a>
+        </div>
+
+        <div class="footer-item">
+            <a href="faq">Contact Us</a>
+            <a href="faq">Speed Test</a> 
+            <a href="faq">Legal Notices</a> 
+            <a href="faq">Only on Netflix</a>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
